# linorobot2_FYP

install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
install/linorobot2_bringup/share/linorobot2_bringup/launch/: esp32_robot.launch.py
install/linorobot2_description/lib/linorobot2_description/: odom_to_tf.py
install/linorobot2_description/share/linorobot2_description/launch/: description.launch.py
install/linorobot2_navigation/share/linorobot2_navigation/config/: navigation_3d.yaml
install/linorobot2_navigation/share/linorobot2_navigation/launch/: 3d_navigation.launch.py
install/linorobot2_navigation/share/linorobot2_navigation/maps/: map1.yaml
install/linorobot2_viz/share/ament_index/resource_index/parent_prefix_path/: linorobot2_viz
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
log/: latest_build
src/linorobot2/linorobot2_base/config/: ekf.yaml
src/linorobot2/linorobot2_description/: CMakeLists.txt
src/linorobot2/linorobot2_navigation/maps/: map1.pgm  office_map.pgm  office_map.yaml  robot_course5.pgm  robot_course5.yaml
